<resources>
    <string name="app_name">LoRaTester</string>
    <string name="serial_btn">Serial OFF</string>
    <string name="mode_btn">Mode: NONE</string>
    <string name="manual_send">Manual send</string>
    <string name="logs">...</string>
    <string name="clearLogs">Clear logs</string>
    <string-array name="modes">
        <item>NONE</item>
        <item>SENDER</item>
        <item>RECEIVER</item>
        <item>RECEIVER-PING</item>
        <item>SENDER-PING</item>
        <item>TEST ALL</item>
    </string-array>
</resources>