<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/app_name"
        />

    <Button
        android:id="@+id/serial_alt_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
        android:text="@string/serial_btn"
        android:onClick="serialAlt"
        />

    <Button
        android:id="@+id/mode_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
        android:text="@string/mode_btn"
        android:onClick="modeAlt"
        />

    <Button
        android:id="@+id/manualSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
        android:text="@string/manual_send"
        android:onClick="manualSend"
        />
    <TextView
        android:id="@+id/gps_monitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
        android:text="Lat: -- | Long: ---"
        />

    <Button
        android:id="@+id/clear_logs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="50dp"
        android:textAlignment="center"
        android:text="@string/clearLogs"
        android:onClick="clearLogs"
        />

    <TextView
        android:id="@+id/logs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="..."
        android:height="480dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/back"
        android:scrollbars="vertical" />

</LinearLayout>